[build-system]
requires = ["setuptools >= 45", "setuptools_scm[toml] >= 6.2", "setuptools-generate"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "python-wakatime"
description = "wakatime plugin for python REPLs"
authors = [{ name = "Wu Zhenyu", email = "wuzhenyu@ustc.edu" }]
readme = "README.md"
requires-python = ">= 3.9"
keywords = ["wakatime", "plugin", "python"]
license = { text = "GPL v3" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "optional-dependencies"]

[project.urls]
Homepage = "https://python-wakatime.readthedocs.io"
Download = "https://github.com/Freed-Wu/python-wakatime/releases"
"Bug Report" = "https://github.com/Freed-Wu/python-wakatime/issues"
Source = "https://github.com/Freed-Wu/python-wakatime"

[tool.setuptools.package-data]
python_wakatime = ["py.typed", "assets/*"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/dev.txt" }

[tool.setuptools_scm]
write_to = "src/python_wakatime/_version.py"

[tool.setuptools-generate]
write-to = "src/python_wakatime/_metainfo.py"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

# https://github.com/PyCQA/pydocstyle/issues/418
[tool.pydocstyle]
add_ignore = "D205, D400"

[tool.doq]
template_path = "templates"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.bandit.assert_used]
skips = [
  "*_test.py",
  "test_*.py",
]
